<resources>
    <string name="app_name">Movie Flix</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="movieflix_title">MovieFlix</string>
    <string name="hint_login_email">Digite seu e-mail</string>
    <string name="hint_login_senha_primeira">Digite sua senha</string>
    <string name="btn_text_login">Entrar</string>
    <string name="tv_cadastrar_login">Cadastrar</string>
    <string name="msg_senha_incorreta">Senha incorreta!</string>
    <string name="msg_erro_login">Erro ao efeturar o login</string>
    <string name="msg_campos_vazios">Favor preencha todos os campos</string>
    <string name="txt_btn_cadastrar">Cadastrar</string>
    <string name="tv_title_cadastrar">Cadastar</string>
    <string name="description_back_btn">Button to back page</string>
    <string name="msg_tamanho_senha">A senha deve ter no minimo 6 caracteres</string>
    <string name="msg_email_existente">O e-mail cadastrado já existe</string>
    <string name="msg_sem_conexao">Estamos com problemas de conexão</string>
    <string name="msg_erro_cadastro_usuario">Erro ao cadastrar usuário</string>
    <string name="hint_search_bar">Digite o nome do filme</string>
    <string name="titulo_detail">Titulo:</string>
    <string name="overview_detail">Overview:</string>
    <string name="dsc_back_btn">voltar pagina</string>
    <string name="botao_proxima_pagina">botao proxima pagina</string>
    <string name="txt_title_dialog">Error:</string>
    <string name="txt_title_btn_dialog">Enviar</string>
    <string name="Message_error_api">Ops tivemos um problema, tente novamente mais tarde!</string>
    <string name="msg_internet_error">Tivemos um problema. Verifique sua conexão com a internet e tente Novamente em alguns instantes!</string>
    <string name="title_menu_info_logout">Sair</string>
    <string name="title_favoritos_bottom_bar">Favoritos</string>
    <string name="title_pesqusiar_bottom_bar">Pesquisar</string>
    <string name="title_lista_bottom_bar">Lista</string>
    <string name="title_account_menu_info">Perfil</string>
    <string name="title_email_account_info">E-mail:</string>
    <string name="button_change_password">Alterar Senha ></string>
    <string name="email_success_update_password">E-mail para redefinição de senha enviado com sucesso!</string>
    <string name="erro_update_password">Erro ao efetuar a atualização da senha!</string>
    <string name="tiltle_account_info">Perfil</string>
    <string name="hint_edt_name">Digite seu nome</string>
    <string name="hint_repetir_senha">Repita a senha anterior</string>
    <string name="alert_senha">A senhas deve ser preenchida!</string>
    <string name="hint_login_senha">Senha</string>
    <string name="title_email_ai">Email:</string>
    <string name="title_name_ai">Nome:</string>
    <string name="text_forget_password">Esqueci a senha></string>
    <string name="title_email">Email:</string>
    <string name="title_name_cadastro">Nome:</string>
    <string name="title_senha">Senha:</string>
    <string name="title_senha_second">Confirme sua senha:</string>
    <string name="title_dialog_password_refactor">Refatorar senha</string>
    <string name="text_hint_email_passowrd_refactor">Seu e-mail</string>
    <string name="title_edt_email_password_refactor">Digite o seu e-mail cadastrado no aplicativo:</string>
    <string name="txt_btn_email_cancel">Cancelar</string>
    <string name="txt_email_alert_empity">Digite um e-mail válido</string>
    <string name="hint_confirm_password_cadastro">Confirme sua senha</string>
    <string name="title_bar_main">Movie Flix</string>
    <string name="subtitle_login">Login</string>
    <string name="text_btn_voltar_cadastro">Voltar</string>
    <string name="msg_cadastro_sucesso">Cadastro Realizado com sucesso!</string>
    <string name="msg_cadastro_falha">Ops, tivemos um problema tente realizar o cadastro Novamente!</string>
</resources>