<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_blue"
    tools:context=".view.fragments.LoginFragment">

    <TextView
        android:id="@+id/tv_title_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/movieflix_title"
        android:textColor="@color/dark_yellow"
        android:textSize="38sp"
        android:layout_marginTop="100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edt_email_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="15dp"
        android:hint="@string/hint_login_email"
        android:background="@color/ligh_yellow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_login"
        android:autofillHints="E-mail Login"
        android:inputType="textWebEmailAddress" />

    <EditText
        android:id="@+id/edt_senha_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="15dp"
        android:hint="@string/hint_login_senha"
        android:background="@color/ligh_yellow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_login"
        android:autofillHints="Senha Login"
        android:inputType="textPassword"/>

    <TextView
        android:id="@+id/tv_alerta_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_senha_login"/>

    <Button
        android:id="@+id/btn_entrar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn_text_login"
        android:textColor="@color/dark_blue"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:backgroundTint="@color/dark_yellow"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_alerta_login"/>

    <TextView
        android:id="@+id/btn_cadastrar_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_cadastrar_login"
        android:textColor="@color/dark_yellow"
        android:textSize="18sp"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_entrar_login"/>

</androidx.constraintlayout.widget.ConstraintLayout>