<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="@android:color/transparent">

    <LinearLayout
        android:background="@color/dark_yellow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/title_dialog_password_refactor"
            android:textColor="@color/white"
            android:fontFamily="@font/quicksand"
            android:textSize="28sp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/quicksand"
            android:text="@string/title_edt_email_password_refactor"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_email_passowrd_refactor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:background="@android:color/transparent"
            android:hint="@string/text_hint_email_passowrd_refactor" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_alert"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <include
            android:id="@+id/frame_send_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/frame_send_cancel"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>
