<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradiente_cadastro"
    tools:context=".ui.cadastrar.CadastrarFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/description_back_btn" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_cadastrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tv_title_cadastrar"
        android:textColor="@color/dark_blue"
        android:textSize="28sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_back" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edt_email_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="E-mail Cadastro"
        android:background="@android:color/transparent"
        android:hint="@string/hint_login_email"
        android:textColor="@color/dark_blue"
        android:inputType="textWebEmailAddress"
        android:padding="15dp"
        android:textColorHint="@color/dark_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_cadastrar" />

    <View
        android:id="@+id/view_email"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_blue"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/edt_email_cadastrar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/name_cadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:autofillHints="Seu nome"
        android:background="@android:color/transparent"
        android:hint="@string/hint_edt_name"
        android:textColor="@color/dark_blue"
        android:inputType="textWebEmailAddress"
        android:padding="15dp"
        android:textColorHint="@color/dark_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_email"/>

    <View
        android:id="@+id/view_nome"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_blue"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/name_cadastro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtinput_password_cadastro_first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:hintEnabled="false"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/dark_blue"
        app:counterTextColor="@color/dark_blue"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/dark_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_nome">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_senha_cadastrar_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="Senha Cadastro"
            android:background="@android:color/transparent"
            android:hint="@string/hint_login_senha_primeira"
            android:textColor="@color/dark_blue"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="@color/dark_blue" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view_senha_first"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_blue"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txtinput_password_cadastro_first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtinput_password_cadastro_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:hintEnabled="false"
        android:textColor="@color/dark_blue"
        android:textColorHint="@color/dark_blue"
        app:counterTextColor="@color/dark_blue"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/dark_blue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_senha_first">
        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_senha_cadastrar_second"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:autofillHints="Senha Cadastro"
            android:background="@android:color/transparent"
            android:hint="@string/hint_repetir_senha"
            android:textColor="@color/dark_blue"
            android:inputType="textPassword"
            android:padding="15dp"
            android:textColorHint="@color/dark_blue" />

    </com.google.android.material.textfield.TextInputLayout>

    <View
        android:id="@+id/view_senha_second"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/dark_blue"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txtinput_password_cadastro_second"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_alerta_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:textStyle="italic"
        android:visibility="gone"
        android:textColor="@color/red"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_senha_second" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_entrar_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bg_button_cadastro"
        android:text="@string/txt_btn_cadastrar"
        android:textAllCaps="false"
        android:textColor="@color/dark_blue"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_alerta_cadastrar" />

</androidx.constraintlayout.widget.ConstraintLayout>